samples/_failures_safe/1761202412_a5dde0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9b1a519f.c: In function ‘main’:
./samples/SAFE/__tmp_9b1a519f.c:205:5: error: expected expression at end of input
  205 |     if (
      |     ^~
./samples/SAFE/__tmp_9b1a519f.c:205:5: error: expected declaration or statement at end of input
